
 Bug fixes:

   - myIDialog: fix focus issue when running 'maybe_non_modal()' (todo #1355).
   - myIGridlist: fix behavior when there is no header (todo #1373).
   - ofaAccountTreeview: fix background color of pixbuf cells (todo #442).
   - ofaAccountTreeview: fix selection post-delete (todo #1400).
   - ofoAccount: make sure the DBMS stays sane when deleting an account (todo #1394).
   - Recurrent: fix periodicity details count.

 Other changes:

   - my_casefold(): new function.
   - myIGridList: has new 'my-row-changed' signal (todo #1371).
   - my_igridlist_add_row(): add user data argument.
   - my_igridlist_get_rows_count(): renamed to my_igridlist_get_details_count().
   - my_igridlist_remove_row(): new function.
   - my_igridlist_set_has_row_number(): new function.
   - my_igridlist_set_has_up_down_buttons: new function.
   - myIWindow: set_restore_position() and set_restore_size() are replaced by set_manage_geometry().
   - myIWindow: set_close_allowed() is renamed to set_allow_close().
   - myIWindow: get_identifier() method is replaced by set_identifier() function.
   - my_stamp_compare(): new function.
   - ofaClosingParmsBin: implements myIGridlist interface (todo #1370).
   - ofa_itvcolumnable_enable_column(): renamed to ofa_itvcolumnable_set_invisible().
   - ofa_itvcolumnable_get_column_type(): new function.
   - ofa_itvcolumnable_get_menu_label(): new function.
   - ofaNomodalPage: class is restored from v0.55.
   - ofa_prefs_pin_detach(): new function.
   - ofaReconcilGroup: new class.
   - ofo_entry_get_abr_from_status(): new function.
   - Periodicity properties: review UI margins (todo #1366).

-----------------------------------------------------------------------
 Version 0.67
 ============

 Released on 2017-02-21

 Total files count:    790
 Total lines count: 524542

 New features and improvements:

   Core DB Model v35
   Recurrent DB Model v8
   VAT DB Model v7

   - Let the user records any document with any table (todo #1263).