@@ -338,6 +338,8 @@
 
 1381 2017- 3-14 Settlement: have an option to display all entries on
                 settleable account waiting for a settlement (so a treestore)
+     2017- 3-16 or an account selection which only display settleable accounts
+                which have still unsettled entries
 
 1382 2017- 3-15 have a list of reconciliable accounts
 
@@ -351,10 +353,6 @@
                 entries = solde at the end of the period
 
 1386 2017- 3-15 merge ledgers book and ledger summary renders
-
-1387 2017- 3-15 when archiving reconciliated/settled entries on exercice
-                closing, only archive which were reconciliated/settled
-                during the corresponding exercice
 
 1388 2017- 3-15 when opening an exercice, should archive the RAN soldes
                 of the accounts, including the sum of the balancing account
@@ -386,7 +384,16 @@
 
 1398 2017- 3-16 check balances: fix the error message (see trash/todo_1398)
 
-1401
+1401 2017- 3-16 export accounts at least with opening balance
+
+1402 2017- 3-17 when generating the ODs for non-deductible CSG, should
+                also generate an OD for deductible CSG to 629 account 
+
+1403 2017- 3-17 have a progress bar on renderings
+
+1404 2017- 3-17 have a progress bar on printing (at least a sablier)
+
+1405
 
 -----------------------------------------------------------------------
  DONE
@@ -842,6 +849,11 @@
 
 1380 2017- 3- 9 when a page can be multiple, add a number to the title
      2017- 3-10 done
+
+1387 2017- 3-15 when archiving reconciliated/settled entries on exercice
+                closing, only archive which were reconciliated/settled
+                during the corresponding exercice
+     2017- 3-20 fixed
 
 1394 2017- 3-16 when delete an account, also delete the archive
      2017- 3-16 done
