@@ -39,6 +39,7 @@
    - ofaAccountTreeview: fix background color of pixbuf cells (todo #442).
    - ofaAccountTreeview: fix selection post-delete (todo #1400).
    - ofoAccount: make sure the DBMS stays sane when deleting an account (todo #1394).
+   - ofaExerciceCloseAssistant: make sure only entries of the closed exercice are archived (todo #1387).
    - Recurrent: fix periodicity details count.
 
  Other changes:
